--- a/main.html
+++ b/main.html
@@ -10,10 +10,10 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<p class="para1">Paragraph 1</p>
-<p>Paragraph 2</p>
-<p class="para3">Paragraph 3</p>
-<p>Paragraph 4</p>
+<p class="para1">Pragraph 1</p>
+<p>Pragraph 2</p>
+<p class="para3">Pragraph 3</p>
+<p>Pragraph 4</p>
 </body>
 
 </html>
